--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  CI:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,8 +26,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Build and push Docker images
+        uses: docker/build-push-action@2.6.1
+        with:
+          context: ./src
+          file: .src/Dockerfile
+          push: true
+          tags: |
+            mateusoliveira/rotten-potatoes:latest
+            mateusoliveira/rotten-potatoes:${{ github.run_number }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
