--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
       # Runs a single command using the runners shell
       - name: Build and push Docker images
-        uses: docker/build-push-action@2.6.1
+        uses: docker/build-push-action@v2.6.1
         with:
           context: ./src
           file: .src/Dockerfile
