--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Docker Login
+      - name: Docker Loginn
       uses: docker/login-action@v1.10.0
       with:
         username: ${{ secrets.DOCKERHUB_USER }}
