--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v2.6.1
         with:
           context: ./src
-          file: .src/Dockerfile
+          file: ./src/Dockerfile
           push: true
           tags: |
             mateusoliveira/rotten-potatoes:latest
