--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PWD }}
       # Runs a single command using the runners shell
-      - name: Build and push Docker images
+      - name: Build and push Docker images do repositorio
         uses: docker/build-push-action@v2.6.1
         with:
           context: ./src
