--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,9 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG }}
+      - name: Deploy mongoDB
+        uses: Azure/k8s-deploy@v1
+        with:
+          manifests:
+            k8s/mongodb/deployment.yml
+            k8s/mongodb/service.yml
