--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,3 +62,9 @@ jobs:
           manifests: |
             k8s/mongodb/deployment.yml
             k8s/mongodb/service.yml
+      - name: Deploy Web
+        uses: Azure/k8s-deploy@v1
+        with:
+          manifests: |
+            k8s/web/deployment.yml
+          image: mateusoliveira/rotten-potatoes:${{ github.run_number }}
