--- a/k8s/web/deployment.yml
+++ b/k8s/web/deployment.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: movies
 spec:  
+  replicas: 10
   selector:
     matchLabels:
       app: movies
@@ -13,7 +14,7 @@ spec:
     spec: 
       containers:
         - name: movies
-          image: fabricioveronez/rotten-potatoes:v1 
+          image: mateusoliveira/rotten-potatoes
           ports:
             - containerPort: 5000
           env: 
@@ -27,3 +28,18 @@ spec:
               value: mongouser
             - name: MONGODB_PASSWORD
               value: mongopwd
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: movies-service
+spec:
+  selector:
+    app: movies
+  ports: 
+  - port: 80
+    targetPort: 5000
+    nodePort: 30000
+  type: LoadBalancer
